Attempt to fix image jumping on contact page

--- a/docs/css/components.css
+++ b/docs/css/components.css
@@ -57,6 +57,7 @@
     border-top: 5px solid #298cff;
 
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    transition: height ease-in-out .2s;
 }
 .contact--secondary {
     border-top-color: #191932;
